# luizalabs-backend-python

apis-assincronas-com-fastapi/banco-de-dados/: 01_conexao.py
apis-assincronas-com-fastapi/dio-blog/: database.py  main.py  pyproject.toml
apis-assincronas-com-fastapi/dio-blog/controllers/: post.py
apis-assincronas-com-fastapi/dio-blog/models/: post.py
apis-assincronas-com-fastapi/dio-blog/schemas/: post.py
apis-assincronas-com-fastapi/dio-blog/services/: post.py
apis-assincronas-com-fastapi/dio-blog/src/: database.py  main.py  security.py
apis-assincronas-com-fastapi/dio-blog/src/controllers/: post.py
apis-assincronas-com-fastapi/dio-blog/src/schemas/: post.py
apis-assincronas-com-fastapi/dio-blog/src/services/: post.py
apis-assincronas-com-fastapi/dio-blog/views/: post.py
banking-app/api/: .env.example  .gitignore  README.md  pyproject.toml
banking-app/api/src/: config.py  database.py  exceptions.py  main.py  security.py
banking-app/api/src/controllers/: __init__.py  account.py  auth.py  transaction.py
banking-app/api/src/models/: __init__.py  account.py  transaction.py  user.py
banking-app/api/src/schemas/: account.py  auth.py  transaction.py  user.py
banking-app/api/src/services/: account.py  transaction.py  user.py
banking-app/api/src/views/: account.py  auth.py  transaction.py  user.py
sistema-bancario-poo/: README.md  desafio.py  main.py
sistema-bancario-poo/application/: __init__.py  banco.py
sistema-bancario-poo/domain/: __init__.py  cliente.py  conta.py  excecoes.py  historico.py  operacoes.py  pessoa_fisica.py  transacao.py
(+6 files in other folders)
