[project]
name = "api"
version = "0.1.0"
description = "Api Rest com FastAPI da aplicação banking-app"
authors = [
    {name = "Gabriel Dantas",email = "gabrieldantaslp@gmail.com"}
]
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
databases = { version = "^0.9.0", extras = ["aiosqlite", "asyncpg"] }
pyjwt = "^2.9.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
